MGN-1426 #comment Fixing login/signup form display issues in Firefox and IE, related to footer overlap

--- a/skin/frontend/enterprise/bootstrap/css/ie.css
+++ b/skin/frontend/enterprise/bootstrap/css/ie.css
@@ -38,6 +38,18 @@ html {
     white-space: pre;
 }
 
+/* login / sign up form - make if overlay on top of footer as "good enough" fix to overlap bug */
+.customer-account-entry .page_center {
+	z-index: 1000;
+}
+/* login / register form input fixes */
+.customer-account-entry .page_center .big-input {
+	line-height: normal;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	min-height: 30px;
+}
+
 /* IE6 FancyBOX */
 
 .fancybox-ie6 #fancybox-close { background: transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/fancybox/fancy_close.png', sizingMethod='scale'); }
